--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -14,6 +14,7 @@
     <td><%= link_to song.artist %></td>
     <td><%= link_to song.genre %></td>
   </tr>
+</table>
 
 <h3><%= link_to "Your Song Library", songs_path %></h3><br>
 
