New Playlist and New Song views

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,5 +15,5 @@
 <h3><%= link_to "View Public Playlists", playlists_path %></h3><br>
 
 
-<%= link_to "Add Playlists", playlists_path %><br>
+<%= link_to "Add Playlists", new_playlist_path %><br>
 <%= link_to "Log Out", logout_path %>
