--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -2,19 +2,24 @@
 
 <p> <%= @playlist.description %></p><br>
 
-<table style='width:100%'>
-  <tr>
-    <th>Song Name</th>
-    <th>Artist</th>
-    <th>Genre</th>
-  </tr>
-  <% @playlist.songs.each do |song| %>
-  <tr>
-    <td><%= link_to song.name, song_path(song) %></td>
-    <td><%= link_to song.artist %></td>
-    <td><%= link_to song.genre %></td>
-  </tr>
-</table>
+<% if @playlist.songs.nil? %>
+  <h3>Playlist is EMPTY. Please <%= link_to "add songs", edit_playlist_path(@playlist) %>.</h3>
+<% else %>
+  <h3> <%= link_to "Add Songs", edit_playlist_path(@playlist) %></h3>
+  <table style='width:100%'>
+    <tr>
+      <th>Song Name</th>
+      <th>Artist</th>
+      <th>Genre</th>
+    </tr>
+    <% @playlist.songs.each do |song| %>
+    <tr>
+      <td><%= link_to song.name, song_path(song) %></td>
+      <td><%= link_to song.artist %></td>
+      <td><%= link_to song.genre %></td>
+    </tr>
+  </table>
+<% end %>
 
 <h3><%= link_to "Your Song Library", songs_path %></h3><br>
 
