--- a/app/views/playlists/new.html.erb
+++ b/app/views/playlists/new.html.erb
@@ -2,7 +2,7 @@
 <br>
 <%= form_for @playlist do |f| %>
   <h4>Title: </h4><br>
-  <%= f.text_field :name %><br>
+  <%= f.text_field :title %><br>
   <h4>Description: </h4><br>
   <%= f.text_area :description %><br>
 
