--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-        <a class="navbar-brand" href="<%= root_url %>"/>Home</a>
+
+
+        <% if logged_in? %>
+          <a class="navbar-brand" href="<%= user_path(current_user) %>"/>Your Profile</a>
+          <a class="navbar-brand" href="<%= logout_path %>"/>Logout</a>
+        <% else %>
+          <a class="navbar-brand" href="<%= root_url %>"/>Home</a>
+        <% end %>
 
         </div>
         <div class="navbar-collapse collapse">
