--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,4 +1,4 @@
-<h1>Welcome to Playlist Manager!</h1>
+<h1>Welcome to Playlist Manager!</h1><br>
 
-<%= link_to 'Sign Up', '/signup' %><br>
-<%= link_to 'Log In', '/login' %>
+<h4><%= link_to 'Sign Up', '/signup' %></h4><br>
+<h4><%= link_to 'Log In', '/login' %></h4>
