--- a/app/views/playlists/edit.html.erb
+++ b/app/views/playlists/edit.html.erb
@@ -18,8 +18,8 @@
   <br>
   <br>
 
-  <label for="playlist[song][id]">Add Song: </label>
-  <input list="songs" name="playlist[song][id]" />
+  <label for="playlist_song">Add Song: </label>
+  <input list="songs" name="playlist[song]" />
   <datalist id="songs">
     <% Song.all.each do |song| %>
       <option value="<%= song.name %> --- <%= song.artist %>">
