--- a/app/views/playlists/edit.html.erb
+++ b/app/views/playlists/edit.html.erb
@@ -10,23 +10,10 @@
   <br>
 
   <%= label :private, "Private", value: true %>
-  <%= f.radio_button :private, true, :checked => true, :value => true %>
+  <%= f.radio_button :private, true, :value => true %>
 
   <%= label :private, "Public", value: false %>
   <%= f.radio_button :private, false, :value => false %>
 
-  <br>
-  <br>
-
-  <label for="playlist_song">Add Song: </label>
-  <input list="songs" name="playlist[song]" />
-  <datalist id="songs">
-    <% Song.all.each do |song| %>
-      <option value="<%= song.name %> --- <%= song.artist %>">
-    <% end %>
-  </datalist>
-  <br>
-  <br>
-
-  <%= f.submit "Edit Playlist" %>
+  <%= f.submit "Save" %>
 <% end %>
