--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,4 +1,4 @@
 <h1>Welcome to Playlist Manager!</h1><br>
 
 <h4><%= link_to 'Sign Up', '/signup' %></h4><br>
-<h4><%= link_to 'Log In', '/login' %></h4>
+<h4><%= link_to 'Login with Playlist Manager', '/login' %> -- OR -- <a href='/auth/facebook'>Login with Facebook</a>
