--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
 <% end %>
 
 <% if @user.playlists.empty? %>
-  <h4><%= link_to "Create New Playlist", new_playlist_path %></h4>
+  <h4><%= link_to "Create New Playlist", new_user_playlist_path(@user) %></h4>
 <% else %>
 
   <% if !is_admin? %>
@@ -25,10 +25,10 @@
   <h4>Your Playlists:</h4><br>
   <ol>
     <% @user.playlists.each do |playlist| %>
-    <li><%= link_to playlist.title, playlist_path(playlist) %></li><br>
+    <li><%= link_to playlist.title, user_playlist_path(@user, playlist) %></li><br>
     <% end %>
   </ol>
-  <h4><%= link_to "Create New Playlist", new_playlist_path %></h4>
+  <h4><%= link_to "Create New Playlist", new_user_playlist_path(@user) %></h4>
 <% end %>
 <br>
 
