--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -21,6 +21,7 @@
       <td><%= link_to song.name, song %></td>
       <td><%= song.artist %></td>
       <td><%= song.genre %></td>
+      <td><%= render 'play_song' %></td>
       <td><%= "Delete" %></td>
     </tr>
     <% end %>
