Working on play method

--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @song do |f| %>
+<%= form_for song do |f| %>
   <%= f.hidden_field :name %>
   <%= f.hidden_field :artist %>
   <%= f.hidden_field :genre %>
