--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -14,6 +14,7 @@
       <th>Song Name</th>
       <th>Artist</th>
       <th>Genre</th>
+      <th></th>
       <th>Delete Song</th>
     </tr>
     <% @playlist.songs.each do |song| %>
@@ -21,7 +22,7 @@
       <td><%= link_to song.name, song %></td>
       <td><%= song.artist %></td>
       <td><%= song.genre %></td>
-      <td><%= render 'play_song' %></td>
+      <td><%= link_to "PLAY",  'songs/play' %></td>
       <td><%= "Delete" %></td>
     </tr>
     <% end %>
