--- a/app/views/songs/_play_song.html.erb
+++ b/app/views/songs/_play_song.html.erb
@@ -3,7 +3,7 @@
   <%= f.hidden_field :artist %>
   <%= f.hidden_field :genre %>
   <%= f.hidden_field :plays %>
-  <%= f.submit "&#9658" %>
+  <%= f.submit "PLAY" %>
   <br>
   <br>
 <% end %>
