--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -35,4 +35,4 @@
 <br>
 
 <h4>Song Search</h4>
-<h4><%= link_to "Most Popular Songs", '/songs/most_popular' %></h4><br>
+<h4><%= link_to "Most Popular Songs", songs_path %></h4><br>
