--- a/app/views/songs/_delete_song.html.erb
+++ b/app/views/songs/_delete_song.html.erb
@@ -3,5 +3,6 @@
   <%= f.hidden_field :artist %>
   <%= f.hidden_field :genre %>
   <%= f.hidden_field :plays %>
-  <%= f.submit "PLAY" %>
+  <input type='hidden' id='delete_song' name="delete" >
+  <%= f.submit "DELETE" %>
 <% end %>
