--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,15 @@
+<% if @user.errors.any? %>
+  <div id="error_explanation">
+    <h4><%= pluralize(@user.errors.count, "error") %> prohibited this user from being created:</h4>
+
+    <ul>
+    <% @user.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <h1>Sign up</h1>
 <br>
 <%= form_for @user do |f| %>
@@ -15,7 +27,7 @@
   <h4>Check box if you wish to be admin:<h4>
   <%= f.check_box :admin %>
   <br>
-  
+
   <br>
   <%= f.submit "Create User" %>
 <% end %>
