--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -2,9 +2,11 @@
 
 <p>Description: <%= @playlist.description %></p>
 
-<h5><%= link_to "Edit Playlist Details", edit_user_playlist_path(@user, @playlist) %></h5>
+<% if @playlist.user == current_user %>
+  <h5><%= link_to "Edit Playlist Details", edit_user_playlist_path(@user, @playlist) %></h5>
 
-<%= render 'add_song' %>
+  <%= render 'add_song' %>
+<% end %>
 
 <% if @playlist.songs.empty? %>
   <h4>Playlist is EMPTY</h4>
@@ -30,4 +32,6 @@
     <% end %>
   </table>
 <% end %>
+
 <br>
+<h4><%= link_to "View More Playlists", playlists_path %></h4>
