--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,3 +57,9 @@ body {
   background-color: red;
   display: table;
 } 
+
+.alert {
+  padding: 2px;
+  background-color: red;
+  display: table;
+}
