--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,7 +28,7 @@
 <br>
 
 <% if is_admin? %>
-  <h4><%= link_to "All User Playlists", playlists_path %></h4><br>
+  <h4><%= link_to "Playlists Index", playlists_path %></h4><br>
   <% else %>
   <h4><%= link_to "Public Playlists", playlists_path %></h4><br>
 <% end %>
