Making functionality to like a playlist

--- a/app/views/users/_like_playlist.html.erb
+++ b/app/views/users/_like_playlist.html.erb
@@ -2,6 +2,6 @@
   <%= f.hidden_field :name %>
   <%= f.hidden_field :email %>
   <%= f.hidden_field :password_digest %>
-  
+  <%= f.hidden_field :admin %>
   <%= f.submit "I like this playlist!" %>
 <% end %>
