--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -34,6 +34,11 @@
 <% end %>
 <br>
 
+<% if !is_admin? %>
+  <h4><%= link_to "My Songs", user_songs_path(@user) %></h4><br>
+<% end %>
+<br>
+
 <h4>Song Search</h4>
 <% if is_admin? %>
   <h4><%= link_to "Song Index", songs_path %></h4><br>
