--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,13 +14,13 @@
   <%= render 'songs/form' %>
 <% end %>
 
-<% if @user.playlists.empty? %>
+<% if @user.playlists.nil? %>
   <h4><%= link_to "Create New Playlist", new_user_playlist_path(@user) %></h4>
 <% else %>
   <h4>Your Playlists:</h4><br>
   <ol>
     <% @user.playlists.each do |playlist| %>
-    <li><%= link_to playlist.title, user_playlist_path(@user, playlist) %></li><br>
+    <li><%= link_to playlist.title, user_playlist_path(playlist.user, playlist) %> --- <%= playlist.user.name %></li><br>
     <% end %>
   </ol>
   <h4><%= link_to "Create New Playlist", new_user_playlist_path(@user) %></h4>
@@ -34,12 +34,11 @@
 <% end %>
 <br>
 
+<h4>Songs:</h4>
 <% if !is_admin? %>
   <h4><%= link_to "My Songs", user_songs_path(@user) %></h4><br>
 <% end %>
-<br>
 
-<h4>Song Search</h4>
 <% if is_admin? %>
   <h4><%= link_to "Song Index", songs_path %></h4><br>
   <% else %>
